--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
   <div class="calculator">
     <input type="text" id="display" disabled>
     <div class="buttons">
-      <button onclick="clearDisplay()">C</button>
-      <button onclick="appendCharacter('7')">7</button>
-      <button onclick="appendCharacter('8')">8</button>
-      <button onclick="appendCharacter('9')">9</button>
-      <button onclick="appendCharacter('/')">/</button>
-      <button onclick="appendCharacter('4')">4</button>
-      <button onclick="appendCharacter('5')">5</button>
-      <button onclick="appendCharacter('6')">6</button>
-      <button onclick="appendCharacter('*')">*</button>
-      <button onclick="appendCharacter('1')">1</button>
-      <button onclick="appendCharacter('2')">2</button>
-      <button onclick="appendCharacter('3')">3</button>
-      <button onclick="appendCharacter('-')">-</button>
-      <button onclick="appendCharacter('0')">0</button>
-      <button onclick="appendCharacter('.')">.</button>
-      <button onclick="calculateResult()">=</button>
-      <button onclick="appendCharacter('+')">+</button>
-      <button onclick="appendCharacter('(')">(</button>
-      <button onclick="appendCharacter(')')">)</button>
-      <button onclick="calculateSquareRoot()">√</button>
-      <button onclick="calculatePower()">x^2</button>
+      <button class="clear" onclick="clearDisplay()">C</button>
+      <button class="btn" onclick="appendCharacter('7')">7</button>
+      <button class="btn" onclick="appendCharacter('8')">8</button>
+      <button class="btn" onclick="appendCharacter('9')">9</button>
+      <button class="btn" onclick="appendCharacter('/')">/</button>
+      <button class="btn" onclick="appendCharacter('4')">4</button>
+      <button class="btn" onclick="appendCharacter('5')">5</button>
+      <button class="btn" onclick="appendCharacter('6')">6</button>
+      <button class="btn" onclick="appendCharacter('*')">*</button>
+      <button class="btn" onclick="appendCharacter('1')">1</button>
+      <button class="btn" onclick="appendCharacter('2')">2</button>
+      <button class="btn" onclick="appendCharacter('3')">3</button>
+      <button class="btn" onclick="appendCharacter('-')">-</button>
+      <button class="btn" onclick="appendCharacter('0')">0</button>
+      <button class="btn" onclick="appendCharacter('.')">.</button>
+      <button class="btn" onclick="calculateResult()">=</button>
+      <button class="btn" onclick="appendCharacter('+')">+</button>
+      <button class="btn" onclick="appendCharacter('(')">(</button>
+      <button class="btn" onclick="appendCharacter(')')">)</button>
+      <button class="btn" onclick="calculateSquareRoot()">√</button>
+      <button class="btn" onclick="calculatePower()">x^2</button>
     </div>
   </div>
   <script src="script.js"></script>
